<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/text_title_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        tools:text="@string/title"/>

    <TextView
        android:id="@+id/text_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/text_title_desc"
        android:text="@string/year"/>

    <TextView
        android:id="@+id/text_year_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/text_year"
        tools:text="@string/year"/>

    <TextView
        android:id="@+id/text_cast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/text_year_desc"
        android:text="@string/cast"/>

    <TextView
        android:id="@+id/text_cast_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/text_cast"
        tools:text="@string/cast"/>

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/image_poster"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/genre"/>
    
    <ImageView
        android:id="@+id/bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintTop_toBottomOf="@id/text_genre"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription"/>
    
    <TextView
        android:id="@+id/text_genre_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_genre"
        app:layout_constraintStart_toEndOf="@id/bubble"
        tools:text="@string/genre"/>

    <TextView
        android:id="@+id/text_description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/bubble"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_description_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/description"/>




</androidx.constraintlayout.widget.ConstraintLayout>