<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cast">Cast :</string>
    <string name="home">Home</string>
    <string name="movie">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="release">Release Date</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="year">Year</string>
    <string name="genre">Genre :</string>
    <string name="gernre_detail">Genre detail</string>
    <string name="menu_favorite">favorite</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>

</resources>